[package]
name = "mailer"
version = "0.1.1"
authors = ["Mike Dilger <mike@optcomp.nz>"]
license = "MIT"

[dependencies.lettre]
git = "http://github.com/lettre/lettre"
rev = "86c45f13c3a978a6d18ef338c0cbb9a26ab78b55"
# git = "http://github.com/mikedilger/lettre"
# branch = "dep"

[dependencies]
time = "0.1"
rustc-serialize = "0.3"
hyper = "0.9"
email = "0.0"
